@@ -28,5 +28,8 @@ void backMenu(GtkMenuToolButton *toolbutton,gpointer data);
 void addToHistory(pageStruct *page,char *folder,bool addtoback);
 void clearForward(pageStruct *page);
 void clearMenu(GtkMenuShell *menushell,gpointer user_data);
+void connectMenu(GtkMenuToolButton *toolbutton,gpointer data);
+void loadNetHistory(void);
+void updateNetHistoryFile(const char *newurl);
 
 #endif
