@@ -1,4 +1,5 @@
 0.0.5
+Added net mount history to toolbar ( use 'C' in prefs toolbar layout to enable ).
 Mount davfs share from address bar with format:http://[USERNAME[:PASSWORD]@][SERVER][:PORT].
 Mount sshfs share from address bar with format:ssh://SERVER[:/PATH]. for security rsa keys are used so no password etc.
 Mount ftp share from address bar with format:ftp://[USERNAME[:PASSWORD]@][SERVER]. curlftpfs needs to be installed.
